# Discord-AI-Bot

./: .gitignore  .pre-commit-config.yaml  LICENSE  Modelfile.example  README.md  config.example.ini  example.env  main.py  model.py  ollama.example.modelfile  pyproject.toml  requirements.txt
selfbot/: creds.py
