[tool.poetry]
name = "selfbot"
version = "0.1.0"
description = ""
authors = ["Ilia Arkania <iliaarkania13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
discord-py-self = "^2.0.0"
ollama = "^0.2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
