[project]
name = "discord-ai-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "colorama>=0.4.6",
    "discord-py-self>=2.0.1",
    "ollama>=0.4.8",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.8",
]
